--- a/pdfmaster.html
+++ b/pdfmaster.html
@@ -44,9 +44,8 @@
 	  <a href="linksmaster.html">Other Links</a>
     </div>
   </div> 
-</div><h1 class="header">Home
-</h1>
-<p><article class="textcontainer">Links to PDFs on this website can be found here: <br>
+</div>
+<h1 class="header">List of PDFs</h1><article class="textcontainer">Links to PDFs on this website can be found here: <br>
 	<ul>• <a class="inlinelink" href="rsc/plato_gyges.pdf">Ring of Gyges (PDF)</a> - (From: Sophia Project)</ul></article></p>
 <footer class="textcontainerfooter">
   <p>Project by Kaden Duncan-Matis, University of Lethbridge, New Media 1000-B</p>
