--- a/privacyabout.html
+++ b/privacyabout.html
@@ -48,8 +48,8 @@
 </div><h1 class="header">About Internet Privacy</h1><article class="textcontainer">With modern times and further steps into the age of the internet, an individual's privacy on the internet has become a topic of concern as actions on the internet become less private, but private actions on the internet also become more sinister in nature. While it is no secret that people act differently behind the sense of anonymity that being on the internet gives them, many others raise concerns with how the invasion of our privacy online in recent times has had severe consequences.
 	<p>Internet privacy is defined as &quot;the privacy and security level of personal data published via the Internet&quot; (<a class="inlinelink" href="https://www.techopedia.com/definition/24954/internet-privacy" title="Technopedia">Technopedia</a>). It refers to the security of your private information and files on the internet. While many prominent individuals champion total internet privacy, there are also many drawbacks. You can find links detailing many of these arguments below:</p>
 	<ul>
-	  <li><a class="inlinelink" href="privacypro.html">Arguments for Internet Privacy</a></li>
-	  <li><a class="inlinelink" href="privacycon.html">Arguments Against Internet Privacy</a></li>
+	  <li><a class="inlinelink" title="Arguments for Internet Privacy" href="privacypro.html">Arguments for Internet Privacy</a></li>
+	  <li><a class="inlinelink" title="Arguments against Internet Privacy" href="privacycon.html">Arguments against Internet Privacy</a></li>
   </ul>
 </article>
 <footer class="textcontainerfooter">
