--- a/surveillanceabout.html
+++ b/surveillanceabout.html
@@ -10,7 +10,7 @@
 </head>
 
 <body bgcolor="#898989">
-	<h1 class="header"><a href="index.html">Surveillance in the Digital Age</a></h1>
+	<h1 class="header"><a href="index.html">gaSurveillance in the Digital Age</a></h1>
 <div class="navbar">
 		<a href="index.html">Home</a>
 	  <div class="dropdown">
@@ -47,7 +47,13 @@
   </div> 
 </div>
 <h1 class="header">About Internet Surveillance</h1>
-<article class="textcontainer"></article><p></p>
+<article class="textcontainer">With modern times and further steps into the age of the internet, the amount of surveillance performed on the internet has become a topic of major concern amongst many individuals. Companies such as Amazon, Facebook, and Google regularly collect data on its users, usually utilizing it in their comprehensive advertising algorithms. However, some utilizations of internet surveillance are far more sinister, using their collected data to track users and use what they collect against them in numerous ways.
+<p>Internet surveillance is typically defined as the monitoring of an individual's online activities and behavior, and is often performed by governments and corporations. There are many reasons why many people consider internet surveillance to be necessary. However, there are also multiple concerns that can be raised about internet surveillance. You can find links detailing many of these arguments below:</p>
+<ul>
+  <li><a href="surveillancepro.html" class="inlinelink" title="Arguments for Internet Surveillance">Arguments for Internet Surveillance</a></li>
+  <li><a href="surveillancecon.html" class="inlinelink" title="Arguments against Internet Surveillance">Arguments against Internet Surveillance</a></li>
+</ul>
+</article>
 <footer class="textcontainerfooter">
   <p>Project by Kaden Duncan-Matis, University of Lethbridge, New Media 1000-B</p>
 </footer>
