--- a/privacypro.html
+++ b/privacypro.html
@@ -3,10 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Surveillance in the Digital Age - Arguments for Internet Privacy</title>
-<link href="css/navbar.css" rel="stylesheet" type="text/css">
-<link href="css/links.css" rel="stylesheet" type="text/css">
-<link href="css/textcontainer.css" rel="stylesheet" type="text/css">
-<link href="css/image.css" rel="stylesheet" type="text/css">
+<link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body bgcolor="#898989">
@@ -47,9 +44,23 @@
   </div> 
 </div>
 <h1 class="header">Arguments for Internet Privacy</h1>
-<p>
-  <article class="textcontainer"></article></p>
+<article class="textcontainer">The following are a collection of arguments made in favor of Internet Privacy:<h2>Internet Privacy Protects Your Reputation and Personal Details</h2>
+<table width="100%" border="0" align="right" cellpadding="14">
+  <tbody>
+    <tr>
+      <td width="57%" align="left" valign="top" scope="row">Personal data is an important factor in our decision making. A government or corporation with copious amounts of your personal data can utilize it to manipulate you. For example, a companies like Google, Amazon, and Facebook make use of your personal data to display targeted advertising to you based on your interests. However, personal data in the wrong hands can be used for incredibly nefarious purposes. Information about one's personal life can affect their reputation, and it can be used against us as blackmail or as a psychological influence on our behaviour.
+        </p>
+        <p>This concern is amplified by the fact that none of this data collected on an individual is truly safe. While companies may claim that your data is truly safe, they can never guarantee this. For example, a company may experience a data breach and have a lot of their data stolen from them. This puts your data in the hands of unscrupulous individuals, which can be anything from your name and email to your banking information, depending on what data is stolen and who the data is stolen from.</p>
+        <p>If these websites had respected the privacy of these individuals and not collected their data, this information would not have been at risk.</p>
+        <p>For example, the data analytics firm Equifax experienced a major security breach in 2017 which compromised credit details of over 143 million individuals, whereas the website Yahoo had over 3 billion accounts compromised in a massive data breach in 2013, putting their accounts as well as their real names and phone numbers at risk.</p>
+        <p>A chart containing details of data major data breaches and the number of affected users since 2006 can be found on the right (Image Credit: <a href="https://www.csoonline.com/article/2130877/the-biggest-data-breaches-of-the-21st-century.html" class="inlinelink" title="CSO: The 18 biggest data breaches of the 21st century">CSO</a>).</p></td>
+      <td width="43%"><img src="img/databreachinfo.jpg" alt="" width="625" height="671" title="CSO: Biggest Data Breaches of the 21st Century"/></td>
+    </tr>
+  </tbody>
+</table>
 
+</article>
+</p>
 <footer class="textcontainerfooter">
   <p>Project by Kaden Duncan-Matis, University of Lethbridge, New Media 1000-B</p>
 </footer>
