--- a/vidmaster.html
+++ b/vidmaster.html
@@ -3,10 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Surveillance in the Digital Age - Home</title>
-<link href="css/navbar.css" rel="stylesheet" type="text/css">
-<link href="css/links.css" rel="stylesheet" type="text/css">
-<link href="css/textcontainer.css" rel="stylesheet" type="text/css">
-<link href="css/image.css" rel="stylesheet" type="text/css">
+<link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body bgcolor="#898989">
