Finished a page and some

--- a/privacycon.html
+++ b/privacycon.html
@@ -44,9 +44,21 @@
   </div> 
 </div>
 <h1 class="header">Arguments Against Internet Privacy</h1>
-<p>
-  <article class="textcontainer"></article></p>
+<article class="textcontainer">The following are a collection of arguments made against Internet Privacy:<h2>Internet Privacy Allows Individuals to Commit Crime without Consequences</h2>
+<table width="100%" border="0" cellpadding="14">
+  <tbody>
+    <tr>
+      <td width="48%" valign="top"><p>Cybercrime is a prominent issue and a major concern for advocates against total internet privacy. While total internet privacy may protect an individual from damaging consequences from their online activities, this unfortunately extends to criminal activities committed on the internet. An individual who breaks the law online often does not face any consequences for their actions.</p>
+        <p>One can find a philisophical discussion on this type of issue within one of Plato's dialogues, <i>The Ring of Gyges</i>.</p></td>
+      <td width="52%" align="right"><embed src="rsc/plato_gyges.pdf" width="750" height="500" type="application/pdf"></td>
+    </tr>
+  </tbody>
+</table>
 
+  <p>&nbsp;</p>
+
+</article>
+</p>
 <footer class="textcontainerfooter">
   <p>Project by Kaden Duncan-Matis, University of Lethbridge, New Media 1000-B</p>
 </footer>
