--- a/privacypro.html
+++ b/privacypro.html
@@ -63,7 +63,8 @@
     </tr>
   </tbody>
 </table>
-<p><h2>Internet Privacy Protects Your Freedom of Speech
+	</article><br>
+<article class="textcontainer"><h2>Internet Privacy Protects Your Freedom of Speech
 </h2>
 <p>&nbsp;</p>
 The ability to remain anonymous on the internet is considered incredibly important by many individuals, as it allows one to voice their opinions without fear of scrutiny. Without access to one's personal details, it is impossible to find an individual on the internet without them disclosing their own personal details, keeping them safe from the potential consequences of voicing their opinions.</p>
