--- a/privacyprotect.html
+++ b/privacyprotect.html
@@ -116,6 +116,8 @@
 	        </tr>
 	      </tbody>
 	  </table>
+	</article><br>
+	<article class="textcontainer">
 		<p>In addition, you can send emails to the following addresses to request your data from these websites:</p>
 	<ul>
 		<p>• <a class="inlinelink" href="mailto: dpo@airbnb.com.">Airbnb</a></p>
@@ -170,7 +172,7 @@
 			[ MY PHONE NUMBER ]<br>
 			[ MY EMAIL ADDRESS ]</p>
 </div>
-</article></p>
+</article>
 
 <footer class="textcontainerfooter">
   <p>Project by Kaden Duncan-Matis, University of Lethbridge, New Media 1000-B</p>
