More icons and shit

--- a/imgmaster.html
+++ b/imgmaster.html
@@ -42,9 +42,9 @@
 	  <a href="linksmaster.html">Other Links</a>
     </div>
   </div> 
-</div><h1 class="header">Home
+</div><h1 class="header">Image Master
 </h1>
-<p><article class="textcontainer">Welcome to my home page.</article></p>
+<p><article class="textcontainer">You can find a master list of all images on the website here:</article></p>
 
 <footer class="textcontainerfooter">
   <p>Project by Kaden Duncan-Matis, University of Lethbridge, New Media 1000-B</p>
