--- a/privacyprotect.html
+++ b/privacyprotect.html
@@ -48,7 +48,7 @@
 	<h1 class="header">Finding Your Data
 	</h1>
 	<article class="textcontainer">Many websites allow you to request a file containing all data that a company has gathered about you for your own personal review. You can find links to places where you can request these files for many popular websites below:<br>
-		<table width="1000" border="0" align="center">
+	  <table width="1000" border="0" align="center">
 		  <tbody>
 		    <tr>
 		      <td width="256" align="center" scope="row"><p>&nbsp;</p>
@@ -104,30 +104,82 @@
 	        </tr>
 		    <tr>
 		      <td align="center" scope="row"><p>&nbsp;</p>
-	          <p><a href="https://help.twitter.com/en/managing-your-account/how-to-download-your-twitter-archive"><img src="img/ico/twitterico.jpg" alt="Twitter" width="128" height="128" class="icon" title="Twitter"/></a><br>Twitter</p>
-	          <p>&nbsp;</p></td>
+	          <p><a href="https://help.twitter.com/en/managing-your-account/how-to-download-your-twitter-archive"><img src="img/ico/twitterico.jpg" alt="Twitter" width="128" height="128" class="icon" title="Twitter"/></a><br>Twitter</p></td>
 		      <td align="center"><p>&nbsp;</p>
-	          <p><a href="https://www.whatsapp.com/contact/?subject=privacy"><img src="img/ico/whatsappico.jpg" alt="Whatsapp" width="128" height="128" class="icon" title="Whatsapp"/></a><br>Whatsapp</p>
-	          <p>&nbsp;</p></td>
+	          <p><a href="https://www.whatsapp.com/contact/?subject=privacy"><img src="img/ico/whatsappico.jpg" alt="Whatsapp" width="128" height="128" class="icon" title="Whatsapp"/></a><br>Whatsapp</p></td>
 		      <td align="center"><p>&nbsp;</p>
-	          <p><a href="https://account.microsoft.com/account/privacy"><img src="img/ico/xboxico.jpg" alt="Xbox" width="128" height="128" class="icon" title="Xbox"/></a><br>Xbox</p>
-	          <p>&nbsp;</p></td>
-		      <td align="center"><a href="https://myaccount.google.com/privacy#takeout"><img src="img/ico/youtubeico.jpg" alt="Youtube" width="128" height="128" class="icon" title="Youtube"/></a><br>Youtube</td>
+	          <p><a href="https://account.microsoft.com/account/privacy"><img src="img/ico/xboxico.jpg" alt="Xbox" width="128" height="128" class="icon" title="Xbox"/></a><br>Xbox</p></td>
+		      <td align="center"><p>&nbsp;</p>
+		        <p><a href="https://myaccount.google.com/privacy#takeout"><img src="img/ico/youtubeico.jpg" alt="Youtube" width="128" height="128" class="icon" title="Youtube"/></a><br>
+		      Youtube</p></td>
 	        </tr>
 	      </tbody>
 	  </table>
 	</article><br>
 	<article class="textcontainer">
-		<p>In addition, you can send emails to the following addresses to request your data from these websites:</p>
-	<ul>
-		<p>• <a class="inlinelink" href="mailto: dpo@airbnb.com.">Airbnb</a></p>
-		<p>• <a class="inlinelink" href="mailto: privacy@evernote.com.">Evernote</a></p>
-      <p>• <a class="inlinelink" href="mailto: privacy@doordash.com">Doordash</a></p>
-		<p>• <a class="inlinelink" href="mailto: privacy@grubhub.com">Grubhub</a></p>
-		<p>• <a class="inlinelink" href="mailto: feedback@slack.com">Slack</a></p>
-		<p>• <a class="inlinelink" href="mailto: privacy@venmo.com">Venmo</a></p>
-		<p>• <a class="inlinelink" href="mailto: privacy@contextlogic.com">Wish</a></p>	
-	</ul>
+	  <p>In addition, you can send emails to the following addresses to request your data from these websites:</p>
+		<table width="1000" border="0" align="center">
+  <tbody>
+    <tr>
+      <td align="center"><p>&nbsp;</p>
+        <p><a href="mailto: dpo@airbnb.com"><img src="img/ico/airbnbico.jpg" class="icon" alt="AirBnB" width="128" height="128" title="AirBnB"/></a><br>
+          AirBnB
+        </p></td>
+		<td align="center"><p>&nbsp;</p>
+	    <p><a href="mailto: privacy@doordash.com"><img src="img/ico/doordashico.jpg" alt="Doordash" width="128" height="128" class="icon" title="Doordash"/></a><br>Doordash</p></td>
+      <td align="center"><p>&nbsp;</p>
+        <p><a href="mailto: privacy.office@ebay.com"><img src="img/ico/ebayico.jpg" class="icon" alt="Ebay" width="128" height="128" title="Ebay"/></a><br>
+        Ebay</p></td>
+      <td align="center"><p>&nbsp;</p>
+        <p><a href="mailto: dpo@etsy.com"><img src="img/ico/etsyico.jpg" class="icon" alt="Etsy" width="128" height="128" title="Etsy"/></a><br>
+        Etsy</p></td>
+ 
+    </tr>
+    <tr>
+      <td align="center"><p>&nbsp;</p>
+        <p><a href="mailto: privacy@evernote.com"><img src="img/ico/evernoteico.jpg" class="icon" alt="Evernote" width="128" height="128" title="Evernote"/></a><br>Evernote</p></td>
+      <td align="center"><p><a href="mailto: privacy@grindr.com"><br>
+        </a></p>
+        <p><a href="mailto: privacy@grindr.com"><img src="img/ico/grindrico.jpg" alt="Grindr" width="128" height="128" class="icon" title="Grindr"/></a><br>Grindr</p></td>
+      <td align="center"><p><a href="mailto: privacy@grubhub.com"><br>
+        </a></p>
+        <p><a href="mailto: privacy@grubhub.com"><img src="img/ico/grubhubico.jpg" alt="Grubhub" width="128" height="128" class="icon" title="Grubhub"/></a><br>Grubhub</p></td>
+      <td align="center"><p>&nbsp;</p>
+        <p><a href="mailto: privacy@intuit.com"><img src="img/ico/intuitico.jpg" alt="Intuit" width="128" height="128" class="icon" title="Intuit"/></a><br>Intuit</p></td>
+    </tr>
+    <tr>
+      <td align="center"><p>&nbsp;</p>
+        <p><a href="mailto: privacy@khanacademy.org"><img src="img/ico/khanacademyico.jpg" alt="Khan Academy" width="128" height="128" class="icon" title="Khan Academy"/></a><br>Khan Academy</p></td>
+      <td align="center"><p>&nbsp;</p>
+        <p><a href="mailto: privacy@match.com"><img src="img/ico/matchico.jpg" alt="Match" width="128" height="128" class="icon" title="Match"/></a><br>Match</p></td>
+      <td align="center"><p>&nbsp;</p>
+        <p><a href="mailto: privacy@musical.ly"><img src="img/ico/musicallyico.jpg" alt="Musical.ly" width="128" height="128" class="icon" title="Musical.ly"/></a><br>Musical.ly</p></td>
+      <td align="center"><p>&nbsp;</p>
+        <p><a href="mailto: privacy@netflix.com"><img src="img/ico/netflixico.jpg" alt="Netflix" width="128" height="128" class="icon" title="Netflix"/></a><br>
+      Netflix</p></td>
+    </tr>
+    <tr>
+      <td align="center"><p>&nbsp;</p>
+        <p><a href="mailto: privacy@quora.com"><img src="img/ico/quoraico.jpg" alt="Quora" width="128" height="128" class="icon" title="Quora"/></a><br>Quora</p></td>
+      <td align="center"><p>&nbsp;</p>
+        <p><a href="mailto: info@roblox.com"><img src="img/ico/robloxico.jpg" alt="Roblox" width="128" height="128" class="icon" title="Roblox"/></a><br>Roblox</p></td>
+      <td align="center"><p>&nbsp;</p>
+        <p><a href="mailto: feedback@slack.com"><img src="img/ico/slackico.jpg" alt="Slack" width="128" height="128" class="icon" title="Slack"/></a><br>Slack</p></td>
+      <td align="center"><p>&nbsp;</p>
+        <p><a href="mailto: privacy@spotify.com"><img src="img/ico/spotifyico.jpg" alt="Spotify" width="128" height="128" class="icon" title="Spotify"/></a><br>Spotify</p></td>
+    </tr>
+    <tr>
+      <td align="center"><p>&nbsp;</p>
+        <p><a href="mailto: privacy@stripe.com"><img src="img/ico/stripe.jpg" alt="Stripe" width="128" height="128" class="icon" title="Stripe"/></a><br>Stripe</p></td>
+      <td align="center"><p>&nbsp;</p>
+        <p><a href="mailto: privacy@venmo.com"><img src="img/ico/venmoico.jpg" alt="Venmo" width="128" height="128" class="icon" title="Venmo"/></a><br>Venmo</p></td>
+      <td align="center"><p>&nbsp;</p>
+        <p><a href="mailto: privacy@contextlogic.com"><img src="img/ico/wishico.jpg" alt="Wish" width="128" height="128" class="icon" title="Wish"/></a><br>Wish</p></td>
+      <td align="center"><p>&nbsp;</p>
+        <p><a href="mailto: privacy@zynga.com"><img src="img/ico/zyngaico.jpg" alt="Zynga" width="128" height="128" class="icon" title="Zynga"/></a><br>Zynga</p></td>
+    </tr>
+  </tbody>
+</table>
 		<p>If you need a template for your email, you can copy the one below if you live outside of the European Union (Credit to <a class="inlinelink" href="https://mydatarequest.com/">MyDataRequest</a> for this template):</p>
 	  <div style="height:120px;width:580px;border:1px solid #ccc;font:16px/26px Georgia, Garamond, Serif;overflow:auto;">
 			<p>Dear Sir or Madam:</p>
@@ -173,7 +225,7 @@
 			[ MY EMAIL ADDRESS ]</p>
 </div>
 </article>
-
+<br>
 <footer class="textcontainerfooter">
   <p>Project by Kaden Duncan-Matis, University of Lethbridge, New Media 1000-B</p>
 </footer>
