More shit I just want this done

--- a/imgmaster.html
+++ b/imgmaster.html
@@ -42,8 +42,8 @@
 	  <a href="linksmaster.html">Other Links</a>
     </div>
   </div> 
-</div><h1 class="header">Image Master
-</h1>
+</div>
+<h1 class="header">List of Images</h1>
 <p><article class="textcontainer">You can find a master list of all images on the website here:</article></p>
 
 <footer class="textcontainerfooter">
