--- a/privacypro.html
+++ b/privacypro.html
@@ -59,21 +59,18 @@
 			<li>In 2011, Sony's <i>Playstation Network</i> experienced a data breach that compromised over 77 million accounts. Along with preventing users from accessing the service for an extended period of time, the data breach also compromised the accounts of those users. At the time, it was considered to be the largest data breach to have ever occurred. The personal details of these users, including their credit card information, was stolen. At the time, Sony found themselves the target of scrutiny for not warning users of the data breach until a week after it had happened, which had violated multiple laws around the world (<a class="inlinelink" href="https://ico.org.uk/for-organisations/guide-to-data-protection/guide-to-the-general-data-protection-regulation-gdpr/personal-data-breaches/" title="Information Commissioner's Office UK: Personal Data Breaches">such as the Data Protection Act in the UK, which requires individuals to be notified of a data breach within 72 hours of it occurring</a>). The cost of this data breach was estimated to be over $171 million dollars (Sources: <a class="inlinelink" href="https://www.reuters.com/article/us-sony-stoldendata/sony-playstation-suffers-massive-data-breach-idUSTRE73P6WB20110427" title="Reuters: Sony PlayStation Suffers Massive Data Breach">Reuters</a>, <a class="inlinelink" href="https://www.cbsnews.com/news/playstation-network-breach-has-cost-sony-171-million/" title="CBS News: PlayStation Network breach has cost Sony $171 million">CBS News</a>).</li>
         </ul>
         <p>A chart containing details of data major data breaches and the number of affected users since 2006 can be found on the right (Image Credit: <a href="https://www.csoonline.com/article/2130877/the-biggest-data-breaches-of-the-21st-century.html" class="inlinelink" title="CSO: The 18 biggest data breaches of the 21st century">CSO</a>).</p></td>
-      <td width="43%" align="right"><img src="img/databreachinfo.jpg" alt="" width="625" height="671" title="CSO: Biggest Data Breaches of the 21st Century"/></td>
+      <td width="43%" align="right"><img src="img/databreachinfo.jpg" alt="CSO: Biggest Data Breaches of the 21st Century" class="image" width="625" height="671" title="CSO: Biggest Data Breaches of the 21st Century"/></td>
     </tr>
   </tbody>
 </table>
 	</article><br>
 <article class="textcontainer"><h2>Internet Privacy Protects Your Freedom of Speech
 </h2>
-<p>&nbsp;</p>
+<p>
 The ability to remain anonymous on the internet is considered incredibly important by many individuals, as it allows one to voice their opinions without fear of scrutiny. Without access to one's personal details, it is impossible to find an individual on the internet without them disclosing their own personal details, keeping them safe from the potential consequences of voicing their opinions.</p>
 <p>It is for this reason that websites such as <i>4chan</i> (where users remain anonymous while interacting with each other) are incredibly popular in the modern age of the internet. A user is able to interact with one another without fear of facing scrutiny beyond the anonymized persona that they inhabit online.</p>
-<p>&nbsp;</p>
 <h2>Internet Privacy Allows People to Separate Their Personal Lives from their Online Lives</h2>
-<p>&nbsp;</p>
-Being able to separate your online life from your personal life is considered very important to many individuals. Many things that people do online  may not be suitable for other aspects of their lives, so the ability to remain private during these interactions is incredibly important. By allowing an individual this level of control over their lives, they gain the ability to present the parts of themselves that are considered suitable for the social circles that they inhabit in these different spaces, and the internet is no different in this regard. The lack of this separation can be incredibly damaging to an individual if these aspects of their lives overlap in such a manner.</article>
-</p>
+<p>Being able to separate your online life from your personal life is considered very important to many individuals. Many things that people do online  may not be suitable for other aspects of their lives, so the ability to remain private during these interactions is incredibly important. By allowing an individual this level of control over their lives, they gain the ability to present the parts of themselves that are considered suitable for the social circles that they inhabit in these different spaces, and the internet is no different in this regard. The lack of this separation can be incredibly damaging to an individual if these aspects of their lives overlap in such a manner.</p></article>
 <footer class="textcontainerfooter">
   <p>Project by Kaden Duncan-Matis, University of Lethbridge, New Media 1000-B</p>
 </footer>
