--- a/surveillancecon.html
+++ b/surveillancecon.html
@@ -43,7 +43,7 @@
     </div>
   </div> 
 </div>
-<h1 class="header">Arguments for Internet Surveillance</h1>
+<h1 class="header">Arguments Against Internet Surveillance</h1>
 <p>
   <article class="textcontainer"></article></p>
 
