--- a/vidmaster.html
+++ b/vidmaster.html
@@ -42,8 +42,8 @@
 	  <a href="linksmaster.html">Other Links</a>
     </div>
   </div> 
-</div><h1 class="header">Home
-</h1>
+</div>
+<h1 class="header">List of Videos</h1>
 <p>
   <article class="textcontainer">Links to videos on this website can be found here:</article></p>
 
