--- a/surveillancepro.html
+++ b/surveillancepro.html
@@ -44,9 +44,34 @@
   </div> 
 </div>
 <h1 class="header">Arguments Against Internet Surveillance</h1>
-<p>
-  <article class="textcontainer"></article></p>
-
+<article class="textcontainer">The following are a collection of arguments made in favor of Internet Surveillance:
+  <h2>Internet Surveillance Helps Keep us Connected</h2>
+	<table width="100%" border="0" cellpadding="14">
+	  <tbody>
+	    <tr>
+	      <td width="67%" align="left" valign="top"><p>Allowing ourselves to be tracked on the internet does have its merits. It allows us to become more and more connected with our online world, and bring the digital world and the real world closer together. By keeping tabs on various aspects of our lives, certain apps and tools are able to receive valuable data that vastly improve their functionality.</p>
+          <p>For example, one can look at Google Maps. By approximating your location, Google Maps can locate where you are remotely, and even give you directions from your current position to a location you are attempting to get to in real time.</p>
+          <p>This applies to other various apps and tools in different ways as well. For example, a website tracking your data (such as Facebook or Youtube) can analyze it to determine your interests and show you content that you are more likely to enjoy. Another example is applications like Grammarly, which analyze your typing habits and can provide you a detailed report on your habits and skills.</p></td>
+	      <td width="33%" align="center"><img src="img/googlemaps.jpg" class="image" alt="Google Maps" width="460" height="238" title="Google Maps"/></td>
+        </tr>
+      </tbody>
+  </table>
+</article>
+<br>
+<article class="textcontainer">
+  <h2>Internet Surveillance Helps Prevent Criminal Activity</h2><br>
+  <table width="100%" border="0" cellpadding="14">
+    <tbody>
+      <tr>
+        <td width="87%" valign="top"><p>Additionally, internet surveillance helps prevent crime from occurring on the internet. By making criminal activity easier to track to an individual, it is easier to enforce punishments for breaking the law upon the users who do so.</p>
+        <p>One example is using an specialized program to scan a computer for illegal files such as child pornography. These can root out hidden files and make it easier to punish these types of criminals should they be suspected of a crime. This program can be placed on a computer secretly through multiple methods, such as installing it through a network backdoor if necessary.</p>
+        <p>Another example is how many video games in South Korea (such as <i>League of Legends</i> or <i>Overwatch</i>) require the user to attach their Social Security Number to their account. This allows these companies to track individuals who cheat in their games and remove them from the community permanently, as they will not be able to make another account due to that association to their Social Security Number.</p></td>
+        <td width="13%"><img src="img/cybercrimestock.jpg" width="320" height="180" class="image"/></td>
+      </tr>
+    </tbody>
+  </table>
+</article>
+</p>
 <footer class="textcontainerfooter">
   <p>Project by Kaden Duncan-Matis, University of Lethbridge, New Media 1000-B</p>
 </footer>
