Last fucking commit tonight because fuck this

--- a/surveillancecon.html
+++ b/surveillancecon.html
@@ -44,9 +44,47 @@
   </div> 
 </div>
 <h1 class="header">Arguments Against Internet Surveillance</h1>
-<p>
-  <article class="textcontainer"></article></p>
+<article class="textcontainer">The following are a collection of arguments made against Internet Surveillance:
+<h2>Edward Snowden and Internet Surveillance</h2>
+<table width="100%" border="0" cellpadding="14">
+  <tbody>
+    <tr>
+      <td><p>Edward Snowden is a well-known United States defector and a staunch activist against Internet Surveillance. He is well-known for leaking confidential information about extensive network surveillance to the public; an act that made him a wanted man within the United States. He currently lives in Moscow as a refugee from United States law.</p>
+        <p>Edward Snowden exposed massive amounts of alarming information about surveillance methods used by governments that can be performed over the internet, such as the following:</p>
+        <ul>
+          <li>The &quot;wiretapping&quot; of communication servers in major companies (such as Facebook, Google, Microsoft, and Yahoo) without the knowledge of users.</li>
+          <li>The monitoring of phone calls and SMS messages without the knowledge of the users.</li>
+          <li>The NSA's repeated violation of US privacy laws on a regular basis.</li>
+          <li>The ability to hack into devices and use them as surveillance tools without the users knowledge (such as activating their microphone and camera, scanning their data, and tracing their calls and location).</li>
+          </ul>
+        <p>While the information he leaked may have deemed him a &quot;traitor&quot; to the United States, he is often championed as an advocate against Internet Surveillance in the modern world.</p>
+        <p>For more information on the information leaked by Snowden, A BBC article about it can be found <a class="inlinelink" href="https://www.bbc.com/news/world-us-canada-23123964" title="BBC: Edward Snowden: Leaks that exposed US spy programme">here</a>.</p></td>
+      <td><img src="img/snowden-1.jpg" alt="Edward Snowden" width="550" height="310" class="image" title="Edward Snowden"/></td>
+    </tr>
+  </tbody>
+</table>
+</article><br>
+<article class="textcontainer">
+<h2>Internet Surveillance Gathers Information that can be Used Against the Individual</h2><br>
+<table width="100%" border="0" cellpadding="14">
+  <tbody>
+    <tr>
+      <td valign="top"><p>Much of the information gathered by internet surveillance is can and often is used against the individual. For many, this is a concern as it can be used to manipulate them, blackmail them, or outright restrict their access to certain services.</p>
+        <p>One fairly mundane example of this is the use of surveillance on sites that track data like the prices for airplane tickets or hotel rooms. If a user checks a price multiple times or checks other websites for similar flights, the website may be programmed to automatically raise or lower the price for that individual to buy that plane ticket, either forcing them to pay a higher price or manipulating them into buying the ticket through that service.</p>
+        <p>Another more concerning example is the &quot;social credit&quot; system used throughout China. A massive, integrated surveillance system built throughout China is used to give individuals a &quot;social credit score&quot;, which is based on their actions which are automatically tracked via this comprehensive surveillance system. An individual can raise or lower their credit through actions such as performing good deeds or receiving traffic violations. An individual's social credit can make it more difficult to get financing and transit tickets, among other things. The system can even identify you via face recognition and automatically deduct a fine from your bank account for a minor legal violation (such as jaywalking).</p>
+        <p>The social credit system in China has been widely criticised for its invasiveness and ability to cause direct damage to the lives of individuals arbitrarily and without the opportunity to appeal. You can find links to articles and videos about China's social credit system below:</p>
+        <ul>
+          <li><a href="https://www.wired.co.uk/article/china-social-credit-system-explained" title="Wired: The Complicated Truth about China's Social Credit System" class="inlinelink">Wired: The Complicated Truth about China's Social Credit System</a></li>
+          <li><a class="inlinelink" href="https://www.businessinsider.com/china-social-credit-system-punishments-and-rewards-explained-2018-4" title="Business Insider: China Social Credit System, Punishments and Rewards Explained">Business Insider: China Social Credit System, Punishments and Rewards Explained</a></li>
+          <li><a class="inlinelink" href="https://youtu.be/Dkw15LkZ_Kw" title="Youtube: China’s "Social Credit System" has Caused more than just Public Shaming (HBO)">Youtube: China’s "Social Credit System" Has Caused More Than Just Public Shaming (HBO)</a></li>
+        </ul></td>
+      <td><img src="img/chinasurveillance-1.jpg" width="700" height="394" alt=""/></td>
+    </tr>
+  </tbody>
+</table>
 
+</article>
+<br>
 <footer class="textcontainerfooter">
   <p>Project by Kaden Duncan-Matis, University of Lethbridge, New Media 1000-B</p>
 </footer>
