--- a/vidmaster.html
+++ b/vidmaster.html
@@ -45,7 +45,7 @@
 </div>
 <h1 class="header">List of Videos</h1>
 <p>
-  <article class="textcontainer">Links to videos on this website can be found here:</article></p>
+  <article class="textcontainer">Links to videos relevant to this website can be found here:</article></p>
 
 <footer class="textcontainerfooter">
   <p>Project by Kaden Duncan-Matis, University of Lethbridge, New Media 1000-B</p>
